--- a/index.html
+++ b/index.html
@@ -389,61 +389,35 @@ a {
 
 <!-- ...............................DATAVISUALISERING NATURKATASTROFER - FORLØBET ..................................-->
 
-						<tr><th colspan = "2">
+<tr><th colspan = "2">
 
-						<h5 class="w3-text-teal"><script>forlob("NATURKATASTROFER - ",26,8,9,9,2020)</script></h5>
-							Dette bliver en repetition af 'data visulaisering' og hente data fra fil.
-							Der bliver et tværfagligt projekt med KomIT kort tid efter.
-							I får udleveret noget kode i skal færdigskrive.</br>
-							Lidt mere repetition i : 'Hente data fra fil', objekter, for-loops og lister</br></br>
+<h5 class="w3-text-teal"><script>forlob("NATURKATASTROFER - ",26,8,9,9,2020)</script></h5>
+  Dette bliver en repetition af 'data visulaisering' og hente data fra fil.
+  Der bliver et tværfagligt projekt med KomIT kort bagefter.
 
-						</th></tr>
+  Lidt mere repetition i : 'Hente data fra fil', objekter, loops og lister</br></br>
 
+</th></tr>
 
-						<tr>
-							<th></th>
-							<th >	</br>	Dato: Mandag d.26/8 </th>
-						</tr>
-						<tr>
-							<th>Materiale:</th>
-							<td>
-						<a href="https://data.humdata.org/dataset/73fcf87e-c8d7-4310-a3ed-8d201ae12246/resource/e42f60f5-1d3c-4bc1-9a95-ac923adb78ba/download/deaths-natural-disasters.csv">
-									deaths-natural-disasters.csv</a>
-							</td>
-						</tr>
-						<tr>
-							<th>Formål:</th>
-							<td>Download data-fil og hent data ind i processingprogrammet.</td>
-						</tr>
-						<tr>
-							<th>Evaluering:</th>
-							<td>Gennemgang af vigtigste metoder på tavlen. loadString og split</td>
-						</tr>
-
-
-						<tr>
-							<th></th>
-							<th >	</br>	Dato: Tirsdag d.27/8 </th>
-						</tr>
-						<tr>
-							<th>Materiale:</th>
-							<td>
-										VIGTIGT: </br>
-										KODE MANGLER !!!!! </br>
-										HER KOMMER DER NOGET KODE I SKAL SKRIVE VIDERE PÅ!!!!</br>
-							</td>
-						</tr>
-						<tr>
-							<th>Formål:</th>
-							<td>	Lidt mere repetition i : 'Hente data fra fil', objekter, for-loops og lister</td>
-						</tr>
-						<tr>
-							<th>Evaluering:</th>
-							<td>Aflevere Video præsentation af produktet + Hele Koden: D.9/9 </br>
-									Kode skal indeholde kommentarer: </br>
-								1.) Forklaring til løsning af hver opgave</br>
-								2.) Forklaring til test af hver opgave</td>
-						</tr>
+<tr>
+  <th></th>
+  <th >	</br>	Dato: Onsdag d.26/8, Torsdag d.27/8 og Torsdag d.3/9 </th>
+</tr>
+<tr>
+  <th>Materiale:</th>
+  <td>
+      <a href="https://youtu.be/wegtcgJ66fs">Video opgave-beskrivelse Del.1</br>
+  </td>
+</tr>
+<tr>
+  <th>Formål:</th>
+  <td>	Del 1 : </br>
+    Lidt mere repetition i : 'Hente data fra fil', objekter, for-loops og lister</td>
+</tr>
+<tr>
+  <th>Evaluering:</th>
+  <td>Aflever klassediagram +  Hele Koden</td>
+</tr>
 
 
 
