--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ a {
 
 <tr><th colspan = "2">
 
-<h5 class="w3-text-teal"><script>forlob("NATURKATASTROFER - ",26,8,9,9,2020)</script></h5>
+<h5 class="w3-text-teal"><script>forlob("NATURKATASTROFER - ",3,9,11,10,2020)</script></h5>
   Dette bliver en repetition af 'data visulaisering' og hente data fra fil.
   Der bliver et tværfagligt projekt med KomIT kort bagefter.
 
@@ -401,22 +401,61 @@ a {
 
 <tr>
   <th></th>
-  <th >	</br>	Dato: Onsdag d.26/8, Torsdag d.27/8 og Torsdag d.3/9 </th>
+  <th >	</br>	Dato : Torsdag d.3/9 ---- NATURKATASTROFER DEL.1 -------</th>
 </tr>
+<tr>
+  <th>Opgave beskrivelse :</th>
+  <td>I denne første del skal i lave hentning af data fra csv-fil.</br>
+      1.) Se videoer </br>
+      2.) Lav træningsopgaver</br>
+      3.) Lav 'data-hentning' fra csv-fil, som beskrevet i video 'Del1 - Opgavebeskrivelse'</td>
+</tr>
+
 <tr>
   <th>Materiale:</th>
   <td>
-      <a href="https://youtu.be/wegtcgJ66fs">Video opgave-beskrivelse Del.1</br>
+      <a href="https://youtu.be/1y7pdNcG7FU">VIDEO : Præsentation af færdigt program!</br>
+      <a href="https://youtu.be/Yo7rf60GYMQ">VIDEO : Del.1 - Opgavebeskrivelse</br>
+      <a href="3G/TraningOpgaver/opgaver.html">HTML : Del.1 - Træningsopgaver (vi gennemgår på tavlen)</br>
+      <a href="3G/Forlob_DataVisualiseringNaturkatastrofer/dnd.csv">CSV-fil : Global data for døde i naturkatastrofer</br>
+
+
+
   </td>
 </tr>
 <tr>
   <th>Formål:</th>
   <td>	Del 1 : </br>
-    Lidt mere repetition i : 'Hente data fra fil', objekter, for-loops og lister</td>
+    Repetition i : 'Hente data fra fil', objekter, for-loops og lister</td>
 </tr>
 <tr>
   <th>Evaluering:</th>
-  <td>Aflever klassediagram +  Hele Koden</td>
+  <td>
+    1.) Tilfældigt udvalgte gennemgår træningsopgaver på projektoren</br>
+    2.) Jeg tjekker at hver gruppe er færdig med del.1 senest d.10/9
+  </td>
+</tr>
+
+<!-- ................................................................................-->
+
+<tr>
+  <th></th>
+  <th >	</br>	Dato : Torsdag d.10/9</th>
+</tr>
+<tr>
+  <th>Materiale:</th>
+  <td>  </td>
+</tr>
+<tr>
+  <th>Formål:</th>
+  <td>samme...</td>
+</tr>
+<tr>
+  <th>Evaluering:</th>
+  <td>
+    1.) Tilfældigt udvalgte gennemgår træningsopgaver på projektoren</br>
+    2.) Jeg tjekker hver gruppe er færdig!!!!
+  </td>
 </tr>
 
 
